# my_rust_travel

./: .gitignore  Cargo.toml  README.md
Bevy/my_bevy_game/: Cargo.toml
Bevy/my_bevy_game/src/: main.rs  test.rs  universal.rs
Bevy/my_bevy_game/src/test/: test1_mod.rs  test2_mod.rs
Bevy/my_bevy_game/src/universal/: camera_mod.rs
RustLang/RustByExample/hello_world/hello_world/: Cargo.toml
RustLang/RustByExample/hello_world/hello_world/src/: comments.rs  format_print.rs  main.rs
RustLang/design_pattern/behavioral/observer/src/: main.rs  observer.rs
RustLang/rust_pro_design/iterator_15/.fleet/: run.json
RustLang/rust_pro_design/iterator_15/src/: iter_adapter.rs  main.rs
RustLang/rust_pro_design/macro_21/: Cargo.toml
RustLang/rust_pro_design/macro_21/.fleet/: run.json
RustLang/rust_pro_design/macro_21/macro_derive/: Cargo.toml
RustLang/rust_pro_design/macro_21/src/: declare_macro.rs
RustLang/rust_pro_design/trait_11/.fleet/: run.json
RustLang/rust_pro_design/trait_11/src/: main.rs
RustLang/test/src/: example.rs  main.rs
RustLang/test/src/example/: associate_trait.rs  override_trait.rs
Tetra/tetra_game/: Cargo.toml
Tetra/tetra_game/resources/anim/: anim.json
Tetra/tetra_game/src/: command.rs  components.rs  entity.rs  entity_component.rs  game.rs  main.rs  res.rs  utils.rs
Tetra/tetra_game/src/command/: move_method.rs
Tetra/tetra_game/src/components/: position.rs  state.rs  view.rs
Tetra/tetra_game/src/entity/: building.rs  character.rs  hero.rs  id.rs  manager.rs
Tetra/tetra_game/src/entity/character/: sample_cha.rs  sample_cha2.rs
Tetra/tetra_game/src/entity_component/: position.rs  view.rs
Tetra/tetra_game/src/game/: mode.rs  save.rs  setting.rs
Tetra/tetra_game/src/game/mode/: sample_mode.rs
Tetra/tetra_game/src/res/: anims.rs  fonts.rs  images.rs  sounds.rs  textures.rs
Tetra/tetra_game/uml/: component.drawio
rust_pro_design/Struct_9/: Cargo.toml
rust_pro_design/Struct_9/src/: main.rs
rust_pro_design/iterator_15/: Cargo.toml
rust_pro_design/iterator_15/src/: create_iter.rs  main.rs
rust_pro_design/macro_21/: Cargo.toml
rust_pro_design/macro_21/macro_derive/src/: lib.rs
rust_pro_design/macro_21/marco_derive/: Cargo.toml
rust_pro_design/macro_21/src/: main.rs
rust_pro_design/struct_9/: Cargo.toml
rust_pro_design/struct_9/.fleet/: run.json
rust_pro_design/struct_9/src/: main.rs
src/: main.rs
test/.fleet/: run.json
