[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = {version = "0.15"}
bevy = {version = "0.15.0",features = ["dynamic_linking"]}
bevy-inspector-egui = "0.28.0"

[workspace]
resolver = "2"
# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'mirror'

[source.mirror]
registry = "https://rsproxy.cn/"
