[package]
name = "tetra_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"


##![cfg_attr(not(debug_assertions),windows_subsystem = "windows")]
[profile.dev.package."*"]
opt-level = 3


[source.crates-io]
replace-with = 'mirror'

[source.mirror]
registry = "https://rsproxy.cn/"

