[package]
name = "tetra_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
egui = "0.28.1"
egui-tetra2 = "0.5.1"

#[dependencies.tetra]
#version = "0.8"
#features = ["sdl2_static_link"]

#![cfg_attr(not(debug_assertions),windows_subsystem = "windows")]
[profile.dev.package."*"]
opt-level = 3


[source.crates-io]
replace-with = 'rsproxy'

[source.rsproxy]
registry = "https://rsproxy.cn/crates.io-index"

# 稀疏索引，要求 cargo >= 1.68
[source.rsproxy-sparse]
registry = "sparse+https://rsproxy.cn/index/"

[registries.rsproxy]
index = "https://rsproxy.cn/crates.io-index"

[net]
git-fetch-with-cli = true
