[package]
name = "macro_derive"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69" #官方的TokenStream转换成macro2的Stream
syn = "2.0.38"#用来macro2::TokenStream 解析语义AST
quote = "1.0.33"#AST转换成官方的TokenStream

